[package]
name = "greenprint"
version = "0.1.3"
description = "A Tauri App"
authors = ["Degtiv"]
edition = "2024"

[lib]
name = "greenprint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Фиксируем time ДО того как его подтянут другие зависимости
time = "=0.3.36"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
